--- a/w3.html
+++ b/w3.html
@@ -38,19 +38,21 @@
         <main class="l-main">
             <!--===== cprofile =====-->
             <section class="cprofile bd-grid" id="cprofile">
-                <h2 class="section-title">Profil SMK YPT Tegal</h2>
+                <h2 class="section-title">Profil PT MLB</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="assets/img/work2.jpg" alt="">
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
-                        Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
-                        diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
-                        perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
-                        pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
-                        Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.</p>           
+                        <p class="about__text" style="text-align: justify;">King Kong Indonesia was founded in 1968 
+                            and is headquartered in Tangerang, Banten. With the aim of providing quality products 
+                            for consumers, King Kong Indonesia continues to innovate and develop the products that 
+                            we have. <br>
+                            King Kong Indonesia produces household products such as mosquito coils, mosquito 
+                            repellent lotion, dish soap, fabric softener and all-purpose dab soap. Our products are 
+                            well known to the public throughout Indonesia and are innovative, safe, and tested products.
+                        </p>           
                     </div>                                   
                 </div>
             </section>
@@ -59,10 +61,7 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
-                <h3>01 Februari 2020 - 28 Februari 2020</h3>
-                <div class="about__img">
-                    <img src="assets/img/cal2020.png" alt="">
-                </div>
+                <h3>14 Februari 2022 - 31 Mei 2024</h3>
             </section>
 
             <!--===== SKILLS =====-->
@@ -110,7 +109,7 @@
                 <h2 class="section-title">Peta</h2>
 
                 <div class="maps__container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.2441821972534!2d109.13762767435118!3d-6.861312093137208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb7788a5c71f5%3A0xc88459669432919!2sSMK%20YPT%20Kota%20Tegal!5e0!3m2!1sid!2sid!4v1755666018255!5m2!1sid!2sid"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.6512089404835!2d109.14692964442749!3d-6.8543083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb7006dcfe191%3A0x85e8fa3b35b74683!2sPT.%20Menara%20Laut%20Bersatu%203%2C%20Kalianyar%20Tegal!5e0!3m2!1sid!2sid!4v1755757777731!5m2!1sid!2sid"
                         width="800"
                         height="450"
                         style="border:0;"
