--- a/w3.html
+++ b/w3.html
@@ -41,17 +41,18 @@
                 <h2 class="section-title">Profil PT MLB</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/work3.jpg" alt="">
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;">King Kong Indonesia was founded in 1968 
-                            and is headquartered in Tangerang, Banten. With the aim of providing quality products 
-                            for consumers, King Kong Indonesia continues to innovate and develop the products that 
-                            we have. <br>
-                            King Kong Indonesia produces household products such as mosquito coils, mosquito 
-                            repellent lotion, dish soap, fabric softener and all-purpose dab soap. Our products are 
-                            well known to the public throughout Indonesia and are innovative, safe, and tested products.
+                        <p class="about__text" style="text-align: justify;"><b>PT Menara Laut Bersatu</b> adalah 
+                            salah satu pabrik manufaktur obat nyamuk bakar merk Kingkong yang berlokasi di Tegal, 
+                            Jawa Tengah. Sebelum bergabung menjadi Menara Laut Bersatu pada tahun 2021, tadinya ada 3 perusahaan 
+                            perusahaan yakni PT Menara Laut, PT Ampuh Perkasa Jaya, dan PT Putera Menara Agung. <br>
+                            PT MLB adalah salah satu dari 3 perusahaan manufaktur obat nyamuk kingkong, dua yang lain 
+                            adalah PT Supratusaman Abadi (Tangerang, Banten) dan PT Menara Jaya Lestari (Sidoarjo, Jawa Timur). 
+                            Head Office Obat nyamuk Kingkong sendiri berlokasi di Office Park, Jl. Pintu Besar Utara Blok Futuris, 
+                            Karawaci No.6, RT.001/RW.009, Panunggangan Bar., Kec. Cibodas, Kota Tangerang, Banten 15138.
                         </p>           
                     </div>                                   
                 </div>
