--- a/w2.html
+++ b/w2.html
@@ -38,19 +38,15 @@
         <main class="l-main">
             <!--===== cprofile =====-->
             <section class="cprofile bd-grid" id="cprofile">
-                <h2 class="section-title">Profil SMK YPT Tegal</h2>
+                <h2 class="section-title">Profil CV Jaya Putra 04</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="assets/img/work2.jpg" alt="">
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
-                        Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
-                        diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
-                        perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
-                        pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
-                        Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.</p>           
+                        <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah --
+                        </p>           
                     </div>                                   
                 </div>
             </section>
@@ -59,10 +55,9 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
-                <h3>01 Februari 2020 - 28 Februari 2020</h3>
-                <div class="about__img">
-                    <img src="assets/img/cal2020.png" alt="">
-                </div>
+                <h3>01 Juni 2021 - 31 Januari 2022</h3>
+                <h2>Posisi</h2>
+                <h4>Freelance IT</h4>
             </section>
 
             <!--===== SKILLS =====-->
@@ -71,30 +66,30 @@
 
             <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Tugas Harian</h2>
+                        <h2 class="skills__subtitle">Tugas</h2>
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-user skills__icon'></i>
-                                <span class="skills__name">Membantu pembimbing di sekolah</span>
+                                <span class="skills__name">Entry data produk ke Aplikasi</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-code skills__icon'></i>
-                                <span class="skills__name">Mengajar dasar koding di visual studio</span>
+                                <span class="skills__name">Memfoto produk untuk dijadikan thumbnail di Aplikasi</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-devices skills__icon'></i>
-                                <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
+                                <span class="skills__name">Melakukan pengaturan terhadap beberapa piranti IT</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-user-voice skills__icon"></i>
-								<span class="skills__name">Memberitahu propek lulusan RPL</span>
+								<span class="skills__name">Menjawab pertanyaan customer</span>
 							</div>
 						</div>
                     </div>
