--- a/w2.html
+++ b/w2.html
@@ -45,7 +45,7 @@
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah --
+                        <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah 
                         </p>           
                     </div>                                   
                 </div>
@@ -77,13 +77,13 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-code skills__icon'></i>
-                                <span class="skills__name">Memfoto produk untuk dijadikan thumbnail di Aplikasi</span>
+                                <span class="skills__name">Foto produk untuk dijadikan thumbnail di Aplikasi</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-devices skills__icon'></i>
-                                <span class="skills__name">Melakukan pengaturan terhadap beberapa piranti IT</span>
+                                <span class="skills__name">Melakukan pengaturan terhadap piranti IT</span>
                             </div>
                         </div>
 						<div class="skills__data">
@@ -105,7 +105,7 @@
                 <h2 class="section-title">Peta</h2>
 
                 <div class="maps__container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.2441821972534!2d109.13762767435118!3d-6.861312093137208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb7788a5c71f5%3A0xc88459669432919!2sSMK%20YPT%20Kota%20Tegal!5e0!3m2!1sid!2sid!4v1755666018255!5m2!1sid!2sid"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9419.823379642537!2d109.13493429457698!3d-6.944512152374044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb92bdb906e7f%3A0xad73e6a1667c50d!2sToko%20Pakaian%20Jaya%20Putra%2004!5e0!3m2!1sid!2sid!4v1755760232864!5m2!1sid!2sid"
                         width="800"
                         height="450"
                         style="border:0;"
