--- a/index.html
+++ b/index.html
@@ -183,6 +183,27 @@
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
+
+                <div class="contact__container bd-grid">
+                    <a href="https://www.linkedin.com/in/muhammad-irfan-syafiq-1020b5187/" class="work__img">
+                        <img src="assets/img/work1.jpg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/f4nn18/" class="work__img">
+                        <img src="assets/img/work2.jpg" alt="">
+                    </a>
+                    <a href="https://github.com/f4nn18" class="work__img">
+                        <img src="assets/img/work3.jpg" alt="">
+                    </a> 
+                    <a href="mailto:muhammadirsyaf18@gmail.com" class="work__img">
+                        <img src="assets/img/work4.png" alt="">
+                    </a>
+                    <!-- <a href="" class="work__img">
+                        <img src="assets/img/work5.jpg" alt="">
+                    </a>
+                    <a href="" class="work__img">
+                        <img src="assets/img/work6.jpg" alt="">
+                    </a> -->
+                </div>
             </section>
         </main>
 
