add position at work

--- a/w2.html
+++ b/w2.html
@@ -45,7 +45,8 @@
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah 
+                        <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah toko grosir 
+                            dan eceran untuk 
                         </p>           
                     </div>                                   
                 </div>
