--- a/w3.html
+++ b/w3.html
@@ -63,6 +63,8 @@
                 <h2 class="section-title">Periode</h2>
 
                 <h3>14 Februari 2022 - 31 Mei 2024</h3>
+                <h2>Posisi</h2>
+                <h4>IT Staff Support</h4>
             </section>
 
             <!--===== SKILLS =====-->
