--- a/w4.html
+++ b/w4.html
@@ -59,6 +59,8 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
+                <h2>Posisi</h2>
+                <h4>IT Staff Junior</h4>
                 <h3>Contract</h3>
                 <h5 style="text-align: center;">13 Juni 2024 - 12 Desember 2024</h5>
                 <h3>Actual</h3>
