--- a/w1.html
+++ b/w1.html
@@ -59,6 +59,8 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
+                <h2>Posisi</h2>
+                <h4>Internship</h4>
                 <h3>01 Februari 2020 - 28 Februari 2020</h3>
                 <div class="about__img">
                     <img src="assets/img/cal2020.png" alt="">
