--- a/w2.html
+++ b/w2.html
@@ -46,7 +46,8 @@
                     
                     <div>
                         <p class="about__text" style="text-align: justify;"><b>Jaya Putra 04</b> adalah toko grosir 
-                            dan eceran untuk 
+                            dan eceran untuk kebutuhan sandang, selain menjual pakaian, Jaya Putra 04 juga menjual 
+                            beragam sarung, sprei, dan oleh-oleh haji.
                         </p>           
                     </div>                                   
                 </div>
