--- a/w2.html
+++ b/w2.html
@@ -72,9 +72,9 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-user skills__icon'></i>
+                                <i class='bxr  bx-arrow-right-stroke-square skills__icon'></i>
                                 <span class="skills__name">Entry data produk ke Aplikasi</span>
-                            </div> 
+                            </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
