chhange icon task

--- a/w2.html
+++ b/w2.html
@@ -72,19 +72,19 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bxr  bx-arrow-right-stroke-square skills__icon'></i>
+                                <i class='bx bx-edit skills__icon'></i>
                                 <span class="skills__name">Entry data produk ke Aplikasi</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-code skills__icon'></i>
+                                <i class='bx bx-camera skills__icon'></i>
                                 <span class="skills__name">Foto produk untuk dijadikan thumbnail di Aplikasi</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-devices skills__icon'></i>
+                                <i class='bx bx-cog skills__icon'></i>
                                 <span class="skills__name">Melakukan pengaturan terhadap piranti IT</span>
                             </div>
                         </div>
