--- a/w3.html
+++ b/w3.html
@@ -77,26 +77,26 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-user skills__icon'></i>
-                                <span class="skills__name">Membantu pembimbing di sekolah</span>
+                                <i class='bx bx-help-circle skills__icon'></i>
+                                <span class="skills__name">Memberikan dukungan kepada semua pengguna yang terkait dengan perangkat IT</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-code skills__icon'></i>
-                                <span class="skills__name">Mengajar dasar koding di visual studio</span>
+                                <i class='bx bx-devices skills__icon'></i>
+                                <span class="skills__name">Melakukan pengecekan dan perbaikan piranti IT</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-devices skills__icon'></i>
-                                <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
+                                <i class='bx bx-radar skills__icon'></i>
+                                <span class="skills__name">Memastikan seluruh piranti IT berjalan semestinya</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class="bx bx-user-voice skills__icon"></i>
-								<span class="skills__name">Memberitahu propek lulusan RPL</span>
+								<i class="bx bx-user skills__icon"></i>
+								<span class="skills__name">Menjadi cadangan jika ada karyawan absensi/data entry berhalangan</span>
 							</div>
 						</div>
                     </div>
