--- a/w4.html
+++ b/w4.html
@@ -22,6 +22,9 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">Id</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">En</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">Jp</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link active">Profil</a></li>
                         <li class="nav__item"><a href="#periode" class="nav__link">Periode</a></li>
                         <li class="nav__item"><a href="#tugas" class="nav__link">Tugas</a></li>
