--- a/w4-en.html
+++ b/w4-en.html
@@ -22,14 +22,14 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">Id</a></li>
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">En</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">Id</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">En</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link_special">Jp</a></li>
-                        <li class="nav__item"><a href="#cprofile" class="nav__link active">Profil</a></li>
-                        <li class="nav__item"><a href="#periode" class="nav__link">Periode</a></li>
-                        <li class="nav__item"><a href="#tugas" class="nav__link">Tugas</a></li>
-                        <li class="nav__item"><a href="#maps" class="nav__link">Peta</a></li>
-                        <li class="nav__item"><a href="https://f4nn.netlify.app" class="nav__link">Kembali</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link active">Profile</a></li>
+                        <li class="nav__item"><a href="#periode" class="nav__link">Period</a></li>
+                        <li class="nav__item"><a href="#tugas" class="nav__link">Task</a></li>
+                        <li class="nav__item"><a href="#maps" class="nav__link">Map</a></li>
+                        <li class="nav__item"><a href="https://f4nn.netlify.app" class="nav__link">Back</a></li>
                     </ul>
                 </div>
 
@@ -42,7 +42,7 @@
         <main class="l-main">
             <!--===== cprofile =====-->
             <section class="cprofile bd-grid" id="cprofile">
-                <h2 class="section-title">Profil SSI</h2>
+                <h2 class="section-title">Company Profile</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
                         <img src="assets/img/work4.png" alt="">
@@ -61,85 +61,77 @@
 
             <!--===== ABOUT =====-->
             <section class="about section " id="periode" style="text-align: center;">
-                <h2 class="section-title">Periode</h2>
+                <h2 class="section-title">position and period</h2>
 
                 <h2>Posisi</h2>
                 <h4>IT Staff Junior</h4>
                 <h3>Contract</h3>
-                <h5 style="text-align: center;">13 Juni 2024 - 12 Desember 2024</h5>
+                <h5 style="text-align: center;">June 13, 2024 - December 12, 2024</h5>
                 <h3>Actual</h3>
-                <h5 style="text-align: center;">13 Juni 2024 - 31 Agustus 2024</h5>
-                <p class="about__text" style="text-align: center;">Kontrak terpaksa berhenti ditengah dikarenakan alasan kesehatan saya pribadi.
+                <h5 style="text-align: center;">June 13, 2024 - August 31, 2024</h5>
+                <p class="about__text" style="text-align: center;">The contract was forced to stop in the middle due to my personal health reasons..
                 </p>
             </section>
 
             <!--===== SKILLS =====-->
             <section class="skills section" id="tugas">
-                <h2 class="section-title">Tugas</h2>
+                <h2 class="section-title">Task</h2>
 
             <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Tugas Utama</h2>
+                        <h2 class="skills__subtitle">Main Task</h2>
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Provide support to all users related to IT device</span>
-                                <span class="skills__name" style="text-align: right">IT機器に関するすべてのユーザーへのサポートを提供します</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Check and prepare IT devices that will be used by users</span>
-                                <span class="skills__name" style="text-align: right">ユーザーが使用するIT機器の確認と準備を行います</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Record all IT devices and users</span>
-                                <span class="skills__name" style="text-align: right">すべてのIT機器とユーザーを記録します</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
 								<span class="skills__name" style="text-align: left">report all matters related to IT and make development plans for next month</span>
-								<span class="skills__name" style="text-align: right">ITに関するすべての事項を報告し、翌月の開発計画を作成します</span>
 							</div>
 						</div>
                     </div>
                     
                     <div>
-                        <h2 class="skills__subtitle">Tugas Tambahan</h2>
+                        <h2 class="skills__subtitle">additional tasks</h2>
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Support and provide assistance to IT Supervisor</span>
-                                <span class="skills__name" style="text-align: right">ITスーパーバイザーへのサポートと支援を提供します</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Quarterly meetings with IT Consultants</span>
-                                <span class="skills__name" style="text-align: right">ITコンサルタントとの四半期ごとの会議を開催します</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
                                 <span class="skills__name" style="text-align: left">Inform and explain regarding IT Policy updates</span>
-                                <span class="skills__name" style="text-align: right">ITポリシーの更新について通知と説明を行います</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
 								<span class="skills__name" style="text-align: left">Provide support and supervision to third parties regarding the installation or repair of IT equipment</span>
-								<span class="skills__name" style="text-align: right">IT機器の設置または修理に関して、第三者へのサポートと監督を提供します</span>
 							</div>
 						</div>
                     </div>
@@ -148,7 +140,7 @@
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="maps">
-                <h2 class="section-title">Peta</h2>
+                <h2 class="section-title">Map</h2>
 
                 <div class="maps__container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1694956659576!2d107.15670747499178!3d-6.372106393618105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69997d24301f6b%3A0xe3966488be77b346!2sPT%20Sumiden%20Sintered%20Components%20Indonesia!5e0!3m2!1sid!2sid!4v1755712139596!5m2!1sid!2sid"
