--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="w3.html" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
                     </a> 
-                    <a href="w4.html" class="work__img">
+                    <a href="w4-id.html" class="work__img">
                         <img src="assets/img/work4.png" alt="">
                     </a>
                     <!-- <a href="" class="work__img">
