--- a/w4-en.html
+++ b/w4-en.html
@@ -22,9 +22,9 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">Id</a></li>
+                        <li class="nav__item"><a href="w4-id.html" class="nav__link_special">Id</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link_special active">En</a></li>
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special">Jp</a></li>
+                        <li class="nav__item"><a href="w4-jp.html" class="nav__link_special">Jp</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link active">Profile</a></li>
                         <li class="nav__item"><a href="#periode" class="nav__link">Period</a></li>
                         <li class="nav__item"><a href="#tugas" class="nav__link">Task</a></li>
@@ -63,7 +63,7 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">position and period</h2>
 
-                <h2>Posisi</h2>
+                <h2>Position</h2>
                 <h4>IT Staff Junior</h4>
                 <h3>Contract</h3>
                 <h5 style="text-align: center;">June 13, 2024 - December 12, 2024</h5>
