--- a/w4-id.html
+++ b/w4-id.html
@@ -22,7 +22,7 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">Id</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active1">Id</a></li>
                         <li class="nav__item"><a href="w4-en.html" class="nav__link_special">En</a></li>
                         <li class="nav__item"><a href="w4-jp.html" class="nav__link_special">Jp</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link active">Profil</a></li>
