--- a/w4-en.html
+++ b/w4-en.html
@@ -23,7 +23,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="w4-id.html" class="nav__link_special">Id</a></li>
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">En</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active1">En</a></li>
                         <li class="nav__item"><a href="w4-jp.html" class="nav__link_special">Jp</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link active">Profile</a></li>
                         <li class="nav__item"><a href="#periode" class="nav__link">Period</a></li>
