--- a/w4-jp.html
+++ b/w4-jp.html
@@ -24,7 +24,7 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="w4-id.html" class="nav__link_special">Id</a></li>
                         <li class="nav__item"><a href="w4-en.html" class="nav__link_special">En</a></li>
-                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active">Jp</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link_special active1">Jp</a></li>
                         <li class="nav__item"><a href="#cprofile" class="nav__link active">プロフィール</a></li>
                         <li class="nav__item"><a href="#periode" class="nav__link">期間</a></li>
                         <li class="nav__item"><a href="#tugas" class="nav__link">タスク</a></li>
